destroy api key (#57)
